--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev",
+    "dev": "prisma generate && node lib/setup.js && next dev",
     "build": "prisma generate && prisma db push && next build",
     "start": "next start",
     "lint": "next lint"
